test/scc_test/stmt/semantic-errors/045.a
045.t:3:18: error: a continue statement may only be used within a loop